# cpp-calendar-todo

./: .gitignore  CMakeLists.txt  calendar-todo.sln
calendar-todo/: API.cpp  API.h  ActionsAPI.cpp  ActionsAPI.h  Auth.cpp  Auth.h  CalendarUI.cpp  CalendarUI.h  FileSystem.h  Menu.h  calendar-todo.vcxproj  calendar-todo.vcxproj.filters  cppstudio.txt  main.cpp
calendar-todo/curl/: libcurl_a.lib
calendar-todo/db/: login.txt
